--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "recharts": "^3.2.1",
     "geojson": "^0.5.0",
     "topojson-client": "^3.1.0",
-    "d3": "^7.9.0"
+    "d3": "^7.9.0",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
